# finsight

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci-api.yml  ci-web.yml  eval.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/src/finsight/: config.py  logging.py
apps/api/src/finsight/api/: __init__.py  main.py
apps/api/src/finsight/api/routes/: health.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_health.py
apps/api/tests/unit/: test_config.py
apps/web/: package.json
docs/decisions/: 0001-architecture.md
